versioned_docs/version-1.3/cli/getting-started.mdx
---
id: getting-started
title: "Getting Started"
sidebar_position: 1
---

# Getting Started

Botkube includes a command-line interface (CLI) that you can use to interact with Botkube and Botkube Cloud from your terminal, or from a script.

## Installation

Select tab depending on the system you use:

import Tabs from "@theme/Tabs";
import TabItem from "@theme/TabItem";

<Tabs groupId="cli">
<TabItem value="macos-arm64" label="Mac with Apple Silicon" default>

Use <a href="https://brew.sh" target="_blank" rel="noreferrer">Homebrew</a> to install the latest Botkube CLI:

```shell
brew install kubeshop/botkube/botkube
```

<hr />

Alternatively, download the Botkube CLI binary and move it to a directory under your `$PATH`:

```shell
curl -Lo botkube https://github.com/kubeshop/botkube/releases/download/v1.2.0/botkube-darwin-arm64
chmod +x botkube && mv botkube /usr/local/bin/botkube
```

</TabItem>

<TabItem value="macos-amd64" label="Mac with Intel chip" default>

Use <a href="https://brew.sh" target="_blank" rel="noreferrer">Homebrew</a> to install the latest Botkube CLI:

```shell
brew install kubeshop/botkube/botkube
```

<hr />

Alternatively, download the Botkube CLI binary and move it to a directory under your `$PATH`:

```shell
curl -Lo botkube https://github.com/kubeshop/botkube/releases/download/v1.2.0/botkube-darwin-amd64
chmod +x botkube && mv botkube /usr/local/bin/botkube
```

</TabItem>

<TabItem value="linux" label="Linux">

Download the Botkube CLI binary and move it to a directory under your `$PATH`:

```shell
curl -Lo botkube https://github.com/kubeshop/botkube/releases/download/v1.2.0/botkube-linux-amd64
chmod +x botkube && mv botkube /usr/local/bin/botkube
```

:::note
You may need to use `sudo` to run the `mv` command as it moves the binary file to the `/usr/local/bin/` directory.
:::

<hr />

Alternatively, if you use <a href="https://brew.sh" target="_blank" rel="noreferrer">Homebrew</a>, you can use it to install the latest Botkube CLI:

```shell
brew install kubeshop/botkube/botkube
```

</TabItem>

<TabItem value="windows" label="Windows">

Use <a href="https://curl.se/windows/" target="_blank" rel="noreferrer">curl</a> to download the Botkube CLI binary:

```shell
curl -Lo botkube https://github.com/kubeshop/botkube/releases/download/v1.2.0/botkube-windows-amd64.exe
```

Move the binary to a directory under your `%PATH%`.

</TabItem>

<TabItem value="other" label="Other">

Use <a href="https://curl.se" target="_blank" rel="noreferrer">curl</a> to download the Botkube CLI binary:

```shell
export OS="" # allowed values: darwin, linux, windows
export ARCH="" # allowed values: amd64, arm64, armv7
#export SUFFIX=".exe" # uncomment if OS is 'windows'
curl -Lo botkube https://github.com/kubeshop/botkube/releases/download/v1.2.0/botkube-${OS}-${ARCH}${SUFFIX}
```

Move the binary to a directory under your `PATH`.

</TabItem>

</Tabs>

## First use

For the commands that are nested under `cloud` command you first need to authenticate with Botkube cloud by running:

```bash
botkube login
```

If credentials are valid, the output is:

```shell
Login Succeeded
```

All available commands you can simply discover by running `botkube --help` or `botkube <command> -h` to see the help output which corresponds to a given command.

## Autocompletion

To learn how to enable autocompletion for your shell, run:

```bash
botkube completion --help
```

> **NOTE:** Be sure to **restart your shell** after installing autocompletion.

When you start typing a `botkube` command, press the `<tab>` character to show a list of available completions. Type `-<tab>` to show available flag completions.
